@@ -1,0 +1,15 @@
+#!/bin/bash
+
+xdg-open main.c
+sleep .5
+xdg-open rmn_calc.c
+sleep .5
+xdg-open rmn_calc.h
+sleep .5
+xdg-open test_rmn_calc.c
+sleep .5
+xdg-open test_rmn_calc.h
+sleep .5
+xdg-open common.h
+sleep .5
+xdg-open change_log.txt
